feature: queries done

--- a/work/report.ipynb
+++ b/work/report.ipynb
@@ -210,7 +210,7 @@
    "source": [
     "$R \\leftarrow {}_{\\text{sku}}G_{\\text{sum(qty)} \\rightarrow \\text{total}}(\\text{Sale} \\bowtie \\text{Order} \\bowtie \\text{contains})$\n",
     "\n",
-    "$\\Pi_{\\text{name}} \\big({}_{\\text{sku}}G_{\\text{max(total)}}R \\bowtie \\text{Product} \\big)$"
+    "$\\Pi_{\\text{name}} \\big(G_{\\text{max(total)} \\rightarrow \\text{total}}R \\bowtie R \\bowtie \\text{Product} \\big)$"
    ]
   },
   {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 287,
    "id": "7dad4bdb-454b-4e0a-af55-93580ab2b56c",
    "metadata": {
     "tags": []
@@ -326,7 +326,7 @@
        "[]"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,19 +438,19 @@
     "(\n",
     "    ssn VARCHAR(20) NOT NULL,\n",
     "    department_name VARCHAR(80) NOT NULL,\n",
-    "    workplace_address VARCHAR(300) NOT NULL,\n",
-    "    PRIMARY KEY(ssn, department_name, workplace_address),\n",
+    "    address VARCHAR(300) NOT NULL,\n",
+    "    PRIMARY KEY(ssn, department_name, address),\n",
     "    FOREIGN KEY(ssn) REFERENCES employees,\n",
     "    FOREIGN KEY(department_name) REFERENCES departments(name),\n",
-    "    FOREIGN KEY(workplace_address) REFERENCES workplaces(address)\n",
+    "    FOREIGN KEY(address) REFERENCES workplaces(address)\n",
     ");\n",
     "\n",
     "CREATE TABLE process\n",
     "(\n",
-    "    employee_ssn VARCHAR(20) NOT NULL,\n",
+    "    ssn VARCHAR(20) NOT NULL,\n",
     "    order_number BIGINT NOT NULL,\n",
-    "    PRIMARY KEY(employee_ssn, order_number),\n",
-    "    FOREIGN KEY(employee_ssn) REFERENCES employees(ssn),\n",
+    "    PRIMARY KEY(ssn, order_number),\n",
+    "    FOREIGN KEY(ssn) REFERENCES employees(ssn),\n",
     "    FOREIGN KEY(order_number) REFERENCES orders\n",
     ");\n",
     "\n",
@@ -476,11 +476,11 @@
     "\n",
     "CREATE TABLE delivery\n",
     "(\n",
-    "    warehouse_address VARCHAR(300) NOT NULL,\n",
-    "    supplier_tin VARCHAR(20) NOT NULL,\n",
-    "    PRIMARY KEY(warehouse_address, supplier_tin),\n",
-    "    FOREIGN KEY(warehouse_address) REFERENCES warehouses(address),\n",
-    "    FOREIGN KEY(supplier_tin) REFERENCES suppliers(tin)\n",
+    "    address VARCHAR(300) NOT NULL,\n",
+    "    tin VARCHAR(20) NOT NULL,\n",
+    "    PRIMARY KEY(address, tin),\n",
+    "    FOREIGN KEY(address) REFERENCES warehouses(address),\n",
+    "    FOREIGN KEY(tin) REFERENCES suppliers(tin)\n",
     ");"
    ]
   },
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 288,
    "id": "689fbf59-980b-4c09-8b8e-7beee128b324",
    "metadata": {
     "tags": []
@@ -596,7 +596,7 @@
        "[]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 288,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +691,7 @@
     "INSERT INTO contains VALUES(7, 'TS123456', 2);\n",
     "INSERT INTO contains VALUES(7, 'KA17120203', 1);\n",
     "INSERT INTO contains VALUES(7, 'KS93528TUT', 1);\n",
-    "INSERT INTO contains VALUES(8, 'HM21KMPW', 1);\n",
+    "INSERT INTO contains VALUES(8, 'HM21KMPW', 2);\n",
     "INSERT INTO contains VALUES(9, 'X00299X9JF', 5);\n",
     "\n",
     "INSERT INTO delivery VALUES('Avenida Lago 23, Cascais, Lisboa, 2765-099', '122365939');\n",
@@ -725,15 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0dced880-473c-45f2-ac36-6f74afbf617b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 292,
    "id": "15197f8d-073e-4cb8-861f-be594a6efadd",
    "metadata": {
     "tags": []
@@ -770,22 +762,20 @@
        "[('Miguel',), ('Pedro',)]"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 292,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "\n",
-    "SELECT DISTINCT c.name \n",
-    "FROM customers c\n",
-    "INNER JOIN orders\n",
-    "    ON (orders.customer_number = c.customer_number)\n",
-    "INNER JOIN contains\n",
-    "    ON ((orders.order_number = contains.order_number) AND (orders.order_date BETWEEN '2023-01-01' AND '2023-12-31'))\n",
-    "INNER JOIN products\n",
-    "    ON ((contains.sku = products.sku) AND (products.price > 50));"
+    "    \n",
+    "SELECT DISTINCT c.name\n",
+    "FROM (SELECT * FROM orders WHERE order_date BETWEEN '2023-01-01' AND '2023-12-31') o\n",
+    "NATURAL JOIN contains\n",
+    "NATURAL JOIN (SELECT * FROM products WHERE price > 50) p\n",
+    "INNER JOIN customers c\n",
+    "    USING (customer_number);"
    ]
   },
   {
@@ -800,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 291,
    "id": "4da673da-e257-421f-a84e-ec7cacc74c8d",
    "metadata": {
     "tags": []
@@ -811,16 +801,43 @@
      "output_type": "stream",
      "text": [
       "*  postgresql://db:***@postgres/db\n",
-      "(psycopg2.ProgrammingError) can't execute an empty query\n",
-      "[SQL: -- SELECT ...]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/f405)\n"
+      "1 rows affected.\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>name</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Carlos</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('Carlos',)]"
+      ]
+     },
+     "execution_count": 291,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "\n",
-    "-- SELECT ..."
+    "    \n",
+    "SELECT DISTINCT e.name\n",
+    "FROM (SELECT * FROM orders WHERE order_date BETWEEN '2023-01-01' AND '2023-01-31') o\n",
+    "NATURAL JOIN process p\n",
+    "NATURAL JOIN (SELECT * FROM (employees INNER JOIN works USING (ssn) NATURAL JOIN workplaces wp NATURAL JOIN warehouses)\n",
+    "            EXCEPT\n",
+    "            SELECT * FROM (employees INNER JOIN works USING (ssn) NATURAL JOIN workplaces wp NATURAL JOIN offices )) e;"
    ]
   },
   {
@@ -835,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 290,
    "id": "b2f660cd-895f-473a-b806-b818615022bb",
    "metadata": {
     "tags": []
@@ -846,16 +863,51 @@
      "output_type": "stream",
      "text": [
       "*  postgresql://db:***@postgres/db\n",
-      "(psycopg2.ProgrammingError) can't execute an empty query\n",
-      "[SQL: -- SELECT ...]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/f405)\n"
+      "1 rows affected.\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>name</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Red Bull, 25cl</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('Red Bull, 25cl',)]"
+      ]
+     },
+     "execution_count": 290,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
     "\n",
-    "-- SELECT ..."
+    "SELECT name FROM\n",
+    "    (SELECT MAX(total) AS total FROM (\n",
+    "            SELECT sku,SUM(qty) AS total\n",
+    "            FROM sales\n",
+    "            NATURAL JOIN orders\n",
+    "            NATURAL JOIN contains\n",
+    "            GROUP BY sku)a)b\n",
+    "    NATURAL JOIN (\n",
+    "        SELECT sku,SUM(qty) AS total\n",
+    "            FROM sales\n",
+    "            NATURAL JOIN orders\n",
+    "            NATURAL JOIN contains\n",
+    "            GROUP BY sku)c\n",
+    "    NATURAL JOIN products;"
    ]
   },
   {
@@ -868,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 289,
    "id": "bed65cfe-3a3c-4244-847b-808f84b12e47",
    "metadata": {
     "tags": []
@@ -879,22 +931,73 @@
      "output_type": "stream",
      "text": [
       "*  postgresql://db:***@postgres/db\n",
-      "(psycopg2.ProgrammingError) can't execute an empty query\n",
-      "[SQL: -- SELECT ...]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/f405)\n"
+      "4 rows affected.\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>order_number</th>\n",
+       "            <th>total</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>2</td>\n",
+       "            <td>2391.49</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>4</td>\n",
+       "            <td>100.00</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>5</td>\n",
+       "            <td>4959.98</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>8</td>\n",
+       "            <td>4779.98</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(2, Decimal('2391.49')),\n",
+       " (4, Decimal('100.00')),\n",
+       " (5, Decimal('4959.98')),\n",
+       " (8, Decimal('4779.98'))]"
+      ]
+     },
+     "execution_count": 289,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
     "\n",
-    "-- SELECT ..."
+    "SELECT order_number,\n",
+    "       SUM(sub_total) AS total\n",
+    "FROM\n",
+    "    (SELECT \n",
+    "        order_number,\n",
+    "        sku,\n",
+    "        qty*price AS sub_total\n",
+    "    FROM sales\n",
+    "    NATURAL JOIN orders\n",
+    "    NATURAL JOIN contains\n",
+    "    NATURAL JOIN products) a\n",
+    "GROUP BY order_number\n",
+    "ORDER BY order_number;"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07eaec2e-772c-4f46-a531-a1cde35ae92e",
+   "id": "3c044274-48b8-4786-b7e6-2e685aabaec4",
    "metadata": {},
    "outputs": [],
    "source": []
