fix: types of ssn, tin, ean

--- a/work/report.ipynb
+++ b/work/report.ipynb
@@ -81,12 +81,12 @@
     "    - address: FK (Workplace)\n",
     "- Warehouse (<u>adress</u>)\n",
     "    - address: FK (Workplace)\n",
-    "- Customer (<u>custNo</u>, name, email, phone, address)\n",
+    "- Customer (<u>customer_number</u>, name, email, phone, address)\n",
     "    - unique(email)\n",
-    "- Order (<u>orderNo</u>, custNo, date)\n",
-    "    - custNo: FK (Customer) not null\n",
-    "- Sale (<u>orderNo</u>)\n",
-    "    - orderNo: FK (Order)\n",
+    "- Package (<u>order_number</u>, customer_number, date)\n",
+    "    - customer_number: FK (Customer) not null\n",
+    "- Sale (<u>order_number</u>)\n",
+    "    - order_number: FK (Package)\n",
     "- Product (<u>sku</u>, name, description, price, ean)\n",
     "    - unique(ean)\n",
     "- Supplier (<u>tin</u>, sku, address, name, date)\n",
@@ -96,15 +96,15 @@
     "    - ssn: FK (Employee)\n",
     "    - name: FK (Department)\n",
     "    - address: FK (Workplace)\n",
-    "- process (<u>ssn</u>, <u>orderNo</u>)\n",
+    "- process (<u>ssn</u>, <u>order_number</u>)\n",
     "    - ssn: FK (Employee)\n",
-    "    - orderNo: FK (Order)\n",
-    "- pay (<u>custNo</u>, <u>orderNo</u>)\n",
-    "    - custNo: FK (Customer)\n",
-    "    - orderNo: FK (Sale)\n",
-    "    - unique(orderNo)\n",
-    "- contains (<u>orderNo</u>, <u>sku</u>, qty)\n",
-    "    - orderNo: FK (Order)\n",
+    "    - order_number: FK (Package)\n",
+    "- pay (<u>customer_number</u>, <u>order_number</u>)\n",
+    "    - customer_number: FK (Customer)\n",
+    "    - order_number: FK (Sale)\n",
+    "    - unique(order_number)\n",
+    "- contains (<u>order_number</u>, <u>sku</u>, qty)\n",
+    "    - order_number: FK (Package)\n",
     "    - sku: FK (Product)\n",
     "    - (qty >= 0)\n",
     "- delivery (<u>address</u>, <u>tin</u>)\n",
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 337,
    "id": "7dad4bdb-454b-4e0a-af55-93580ab2b56c",
    "metadata": {
     "tags": []
@@ -326,7 +326,7 @@
        "[]"
       ]
      },
-     "execution_count": 319,
+     "execution_count": 337,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,8 +352,8 @@
     "\n",
     "CREATE TABLE employee\n",
     "(\n",
-    "    ssn VARCHAR(20),\n",
-    "    tin VARCHAR(20) UNIQUE NOT NULL,\n",
+    "    ssn NUMERIC(12),\n",
+    "    tin NUMERIC(12) UNIQUE NOT NULL,\n",
     "    bdate DATE NOT NULL,\n",
     "    name VARCHAR(80) NOT NULL,\n",
     "    PRIMARY KEY(ssn)\n",
@@ -419,13 +419,13 @@
     "    name VARCHAR(80),\n",
     "    description VARCHAR(1000),\n",
     "    price DECIMAL,\n",
-    "    ean VARCHAR(13) UNIQUE,\n",
+    "    ean NUMERIC(13) UNIQUE,\n",
     "    PRIMARY KEY(sku)\n",
     ");\n",
     "\n",
     "CREATE TABLE supplier\n",
     "(\n",
-    "    tin VARCHAR(20),\n",
+    "    tin NUMERIC(12),\n",
     "    sku VARCHAR(20) NOT NULL,\n",
     "    address VARCHAR(300),\n",
     "    name VARCHAR(80),\n",
@@ -436,7 +436,7 @@
     "\n",
     "CREATE TABLE works\n",
     "(\n",
-    "    ssn VARCHAR(20) NOT NULL,\n",
+    "    ssn NUMERIC(12) NOT NULL,\n",
     "    department_name VARCHAR(80) NOT NULL,\n",
     "    address VARCHAR(300) NOT NULL,\n",
     "    PRIMARY KEY(ssn, department_name, address),\n",
@@ -447,7 +447,7 @@
     "\n",
     "CREATE TABLE process\n",
     "(\n",
-    "    ssn VARCHAR(20) NOT NULL,\n",
+    "    ssn NUMERIC(12) NOT NULL,\n",
     "    order_number BIGINT NOT NULL,\n",
     "    PRIMARY KEY(ssn, order_number),\n",
     "    FOREIGN KEY(ssn) REFERENCES employee(ssn),\n",
@@ -477,7 +477,7 @@
     "CREATE TABLE delivery\n",
     "(\n",
     "    address VARCHAR(300) NOT NULL,\n",
-    "    tin VARCHAR(20) NOT NULL,\n",
+    "    tin NUMERIC(12) NOT NULL,\n",
     "    PRIMARY KEY(address, tin),\n",
     "    FOREIGN KEY(address) REFERENCES warehouse(address),\n",
     "    FOREIGN KEY(tin) REFERENCES supplier(tin)\n",
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 338,
    "id": "689fbf59-980b-4c09-8b8e-7beee128b324",
    "metadata": {
     "tags": []
@@ -596,7 +596,7 @@
        "[]"
       ]
      },
-     "execution_count": 320,
+     "execution_count": 338,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,9 +609,9 @@
     "INSERT INTO customer VALUES (DEFAULT, 'Miguel', 'migueltavares@gmail.com', '+351 942069697', 'Travessa da Esperança nº14 2ºD, Rebordosa, Porto, Portugal');\n",
     "INSERT INTO customer VALUES (DEFAULT, 'José', 'zedopipo@gmail.com', '+351 918008576', 'Rua do Técnico nº1, Pinhal Novo, Setúbal, Portugal');\n",
     "\n",
-    "INSERT INTO employee VALUES ('10293847562','201928376','2000-06-15','João');\n",
-    "INSERT INTO employee VALUES ('91827364503','282736579','2001-03-15','Carlos');\n",
-    "INSERT INTO employee VALUES ('10243347562','200923356','2002-04-15','Marcos');\n",
+    "INSERT INTO employee VALUES (10293847562, 201928376, '2000-06-15', 'João');\n",
+    "INSERT INTO employee VALUES (91827364503, 282736579, '2001-03-15', 'Carlos');\n",
+    "INSERT INTO employee VALUES (10243347562, 200923356, '2002-04-15', 'Marcos');\n",
     "\n",
     "INSERT INTO department VALUES('Recursos Humanos');\n",
     "INSERT INTO department VALUES('Logística');\n",
@@ -650,28 +650,28 @@
     "INSERT INTO product VALUES('HM21KMPW', 'Portátil Gaming ASUS Rog Strix', 'Intel Core i7, 32Gb Ram, RTX 4080, SSD NVMe 1Tb', 2389.99);\n",
     "INSERT INTO product VALUES('X00299X9JF', 'Fortnite 1500 VBUCKS Gift Card', 'Código de acesso a 1500 VBUCKS. Compatível com Windows, Mac, iOS, Android, PlayStation, XBOX, Nintendo Switch.', 0.50);\n",
     "\n",
-    "INSERT INTO supplier VALUES('122365939', 'TS123456', 'Av. Santo Condestável, 1950-011 Lisboa', 'Molhadinha, Lda.', '2024-01-01');\n",
-    "INSERT INTO supplier VALUES('135238432', 'KS944RUR', 'Campo Pequeno, 1000-082 Lisboa', 'Apple', '2024-02-01');\n",
-    "INSERT INTO supplier VALUES('159438584', 'KS93528TUT', 'Praça Duque de Saldanha 1, 1050-094 Lisboa', 'Oreo', '2023-12-31');\n",
-    "INSERT INTO supplier VALUES('154294955', 'KA17120203', 'Av. da Liberdade 240 2º Esq, 1250-148 Lisboa', 'Red Bull', '2024-01-01');\n",
-    "INSERT INTO supplier VALUES('165439089', 'HM21KMPW', 'Praça Martim Moniz 39, 1150-052 Lisboa', 'ASUS', '2025-01-01');\n",
-    "INSERT INTO supplier VALUES('194355853', 'X00299X9JF', 'Rua do Grilo 84, 1950-144 Lisboa', 'Epic Games', '2024-12-31');\n",
+    "INSERT INTO supplier VALUES(122365939, 'TS123456', 'Av. Santo Condestável, 1950-011 Lisboa', 'Molhadinha, Lda.', '2024-01-01');\n",
+    "INSERT INTO supplier VALUES(135238432, 'KS944RUR', 'Campo Pequeno, 1000-082 Lisboa', 'Apple', '2024-02-01');\n",
+    "INSERT INTO supplier VALUES(159438584, 'KS93528TUT', 'Praça Duque de Saldanha 1, 1050-094 Lisboa', 'Oreo', '2023-12-31');\n",
+    "INSERT INTO supplier VALUES(154294955, 'KA17120203', 'Av. da Liberdade 240 2º Esq, 1250-148 Lisboa', 'Red Bull', '2024-01-01');\n",
+    "INSERT INTO supplier VALUES(165439089, 'HM21KMPW', 'Praça Martim Moniz 39, 1150-052 Lisboa', 'ASUS', '2025-01-01');\n",
+    "INSERT INTO supplier VALUES(194355853, 'X00299X9JF', 'Rua do Grilo 84, 1950-144 Lisboa', 'Epic Games', '2024-12-31');\n",
     "\n",
-    "INSERT INTO works VALUES('10293847562', 'Logística', 'Rua Cid Tomar 49, Palhais, Setúbal, 2830-573');\n",
-    "INSERT INTO works VALUES('10293847562', 'Recursos Humanos', 'Avenida Lago 23, Cascais, Lisboa, 2765-099');\n",
-    "INSERT INTO works VALUES('91827364503', 'Comercial', 'Rua Pé Mouro Armz 108, Sintra, Lisboa, 2735-542');\n",
-    "INSERT INTO works VALUES('10243347562', 'Logística', 'Av. Ten-Cel. Melo Antunes, Fafe, Braga, 4820-398');\n",
-    "INSERT INTO works VALUES('10243347562', 'Comercial', 'Rua Cid Tomar 49, Palhais, Setúbal, 2830-573');\n",
+    "INSERT INTO works VALUES(10293847562, 'Logística', 'Rua Cid Tomar 49, Palhais, Setúbal, 2830-573');\n",
+    "INSERT INTO works VALUES(10293847562, 'Recursos Humanos', 'Avenida Lago 23, Cascais, Lisboa, 2765-099');\n",
+    "INSERT INTO works VALUES(91827364503, 'Comercial', 'Rua Pé Mouro Armz 108, Sintra, Lisboa, 2735-542');\n",
+    "INSERT INTO works VALUES(10243347562, 'Logística', 'Av. Ten-Cel. Melo Antunes, Fafe, Braga, 4820-398');\n",
+    "INSERT INTO works VALUES(10243347562, 'Comercial', 'Rua Cid Tomar 49, Palhais, Setúbal, 2830-573');\n",
     "\n",
-    "INSERT INTO process VALUES('91827364503', 1);\n",
-    "INSERT INTO process VALUES('91827364503', 2);\n",
-    "INSERT INTO process VALUES('91827364503', 3);\n",
-    "INSERT INTO process VALUES('91827364503', 4);\n",
-    "INSERT INTO process VALUES('91827364503', 5);\n",
-    "INSERT INTO process VALUES('91827364503', 6);\n",
-    "INSERT INTO process VALUES('10243347562', 7);\n",
-    "INSERT INTO process VALUES('10243347562', 8);\n",
-    "INSERT INTO process VALUES('10243347562', 9);\n",
+    "INSERT INTO process VALUES(91827364503, 1);\n",
+    "INSERT INTO process VALUES(91827364503, 2);\n",
+    "INSERT INTO process VALUES(91827364503, 3);\n",
+    "INSERT INTO process VALUES(91827364503, 4);\n",
+    "INSERT INTO process VALUES(91827364503, 5);\n",
+    "INSERT INTO process VALUES(91827364503, 6);\n",
+    "INSERT INTO process VALUES(10243347562, 7);\n",
+    "INSERT INTO process VALUES(10243347562, 8);\n",
+    "INSERT INTO process VALUES(10243347562, 9);\n",
     "\n",
     "INSERT INTO pay VALUES(3, 2);\n",
     "INSERT INTO pay VALUES(3, 4);\n",
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 333,
    "id": "15197f8d-073e-4cb8-861f-be594a6efadd",
    "metadata": {
     "tags": []
@@ -762,7 +762,7 @@
        "[('Miguel',), ('Pedro',)]"
       ]
      },
-     "execution_count": 322,
+     "execution_count": 333,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 334,
    "id": "6d5950f2-a166-45cb-a217-3d13e0253dda",
    "metadata": {
     "tags": []
@@ -824,7 +824,7 @@
        "[('Carlos',)]"
       ]
      },
-     "execution_count": 323,
+     "execution_count": 334,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 335,
    "id": "115d2b57-34a7-4d8c-b5fe-0a0df5a6a9df",
    "metadata": {
     "tags": []
@@ -887,7 +887,7 @@
        "[('Red Bull, 25cl',)]"
       ]
      },
-     "execution_count": 324,
+     "execution_count": 335,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 336,
    "id": "bed65cfe-3a3c-4244-847b-808f84b12e47",
    "metadata": {
     "tags": []
@@ -965,7 +965,7 @@
        " (8, Decimal('4779.98'))]"
       ]
      },
-     "execution_count": 325,
+     "execution_count": 336,
      "metadata": {},
      "output_type": "execute_result"
     }
