feature: content done

--- a/work/report.ipynb
+++ b/work/report.ipynb
@@ -13,11 +13,11 @@
     "\n",
     "### Grupo 21\n",
     "<dl>\n",
-    "    <dt>HH horas (33.3%)</dt>\n",
+    "    <dt>16 horas (33%)</dt>\n",
     "    <dd>ist1100293 Carlos Felgueiras</dd>\n",
-    "    <dt>HH horas (33.3%)</dt>\n",
+    "    <dt>16 horas (34%)</dt>\n",
     "    <dd>ist1102556 Daniel Carvalho</dd>\n",
-    "    <dt>HH horas (33.3%)</dt>\n",
+    "    <dt>16 horas (33%)</dt>\n",
     "    <dd>ist1102597 Duarte Sousa</dd>\n",
     "<dl>"
    ]
@@ -79,16 +79,16 @@
     "    - unique(lat, long)\n",
     "- Office (<u>address</u>)\n",
     "    - address: FK (Workplace)\n",
-    "- Warehouse (<u>adress</u>)\n",
+    "- Warehouse (<u>address</u>)\n",
     "    - address: FK (Workplace)\n",
     "- Customer (<u>customer_number</u>, name, email, phone, address)\n",
     "    - unique(email)\n",
-    "- Package (<u>order_number</u>, customer_number, date)\n",
+    "- Order (<u>order_number</u>, customer_number, date)\n",
     "    - customer_number: FK (Customer) not null\n",
     "- Sale (<u>order_number</u>)\n",
-    "    - order_number: FK (Package)\n",
+    "    - order_number: FK (Order)\n",
     "- Product (<u>sku</u>, name, description, price, ean)\n",
-    "    - unique(ean)\n",
+    "    - (price > 0)\n",
     "- Supplier (<u>tin</u>, sku, address, name, date)\n",
     "    - sku: FK (Product) not null\n",
     "\n",
@@ -98,15 +98,15 @@
     "    - address: FK (Workplace)\n",
     "- process (<u>ssn</u>, <u>order_number</u>)\n",
     "    - ssn: FK (Employee)\n",
-    "    - order_number: FK (Package)\n",
+    "    - order_number: FK (Order)\n",
     "- pay (<u>customer_number</u>, <u>order_number</u>)\n",
     "    - customer_number: FK (Customer)\n",
     "    - order_number: FK (Sale)\n",
     "    - unique(order_number)\n",
     "- contains (<u>order_number</u>, <u>sku</u>, qty)\n",
-    "    - order_number: FK (Package)\n",
+    "    - order_number: FK (Order)\n",
     "    - sku: FK (Product)\n",
-    "    - (qty >= 0)\n",
+    "    - (qty > 0)\n",
     "- delivery (<u>address</u>, <u>tin</u>)\n",
     "    - address: FK (Warehouse)\n",
     "    - tin: FK (Supplier)"
@@ -128,7 +128,7 @@
    "metadata": {},
    "source": [
     "- RI-1: Todo o ssn em Employee tem de estar presente em works.\n",
-    "- RI-2: Todo o par (custNo, orderNo) em pay tem de estar presente em Order.\n",
+    "- RI-2: Todo o par (customer_number, order_number) em pay tem de estar presente em Order.\n",
     "- RI-3: Todo o orderNo em Order tem de estar presente em contains.\n",
     "- RI-4: Todo o sku em Product tem de estar presente em Supplier."
    ]
@@ -174,7 +174,7 @@
    "id": "fb153d59-2d55-484f-bed9-0c60e02b27ae",
    "metadata": {},
    "source": [
-    "$\\Pi_{\\text{c.name}} \\big(\\text{Customer} \\bowtie_{\\text{c.custNo} = \\text{o.custNo}}\\rho_{o}((\\sigma_{\\text{date} \\ge \\text{\"01-01-2023\"} \\wedge \\text{date} \\le \\text{\"31-12-2023\"}} (\\text{Order}))\\bowtie \\text{contains} \\bowtie (\\sigma_{\\text{price} > 50} (\\text{Product}))) \\big)$"
+    "$\\Pi_{\\text{c.name}} \\big(\\text{Customer} \\bowtie_{\\text{c.customer_number} = \\text{o.customer_number}}\\rho_{o}(\\sigma_{\\text{date} \\ge \\text{\"01-01-2023\"} \\wedge \\text{date} \\le \\text{\"31-12-2023\"}} (\\text{Order})\\bowtie \\text{contains} \\bowtie \\sigma_{\\text{price} > 50} (\\text{Product})) \\big)$"
    ]
   },
   {
@@ -226,7 +226,7 @@
    "id": "31ba6844-b37c-40df-9745-7db2f3254fda",
    "metadata": {},
    "source": [
-    "${}_{\\text{orderNo}}G_{\\text{sum(sub_total)} \\rightarrow \\text{total}} \\rho_{3 \\rightarrow \\text{sub_total}}\\Pi_{\\text{orderNo, sku, qty*price}}  \\big(\\text{Sale} \\bowtie \\text{Order} \\bowtie \\text{contains} \\bowtie \\text{Product} \\big)$"
+    "${}_{\\text{orderNo}}G_{\\text{sum(sub_total)} \\rightarrow \\text{total}} \\rho_{2 \\rightarrow \\text{sub_total}}\\Pi_{\\text{orderNo, qty*price}}  \\big(\\text{Sale} \\bowtie \\text{Order} \\bowtie \\text{contains} \\bowtie \\text{Product} \\big)$"
    ]
   },
   {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 349,
    "id": "7dad4bdb-454b-4e0a-af55-93580ab2b56c",
    "metadata": {
     "tags": []
@@ -326,13 +326,15 @@
        "[]"
       ]
      },
-     "execution_count": 337,
+     "execution_count": 349,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
+    "-- Visto que 'order' é uma keyword em SQL, decidimos renomear a relação Order para package.\n",
+    "\n",
     "-- schema.sql\n",
     "DROP TABLE IF EXISTS employee CASCADE;\n",
     "DROP TABLE IF EXISTS department CASCADE;\n",
@@ -350,6 +352,7 @@
     "DROP TABLE IF EXISTS contains CASCADE;\n",
     "DROP TABLE IF EXISTS delivery CASCADE;\n",
     "\n",
+    "-- RI-1: Todo o ssn em employee tem de estar presente em works.\n",
     "CREATE TABLE employee\n",
     "(\n",
     "    ssn NUMERIC(12),\n",
@@ -398,6 +401,8 @@
     "    PRIMARY KEY(customer_number)\n",
     ");\n",
     "\n",
+    "-- RI-2: Todo o par (customer_number, order_number) em pay tem de estar presente em package.\n",
+    "-- RI-3: Todo o orderNo em package tem de estar presente em contains.\n",
     "CREATE TABLE package\n",
     "(\n",
     "    order_number BIGSERIAL,\n",
@@ -413,16 +418,19 @@
     "    FOREIGN KEY(order_number) REFERENCES package\n",
     ");\n",
     "\n",
+    "-- RI-4: Todo o sku em product tem de estar presente em supplier.\n",
     "CREATE TABLE product\n",
     "(\n",
     "    sku VARCHAR(20),\n",
     "    name VARCHAR(80),\n",
     "    description VARCHAR(1000),\n",
     "    price DECIMAL,\n",
-    "    ean NUMERIC(13) UNIQUE,\n",
-    "    PRIMARY KEY(sku)\n",
+    "    ean NUMERIC(13),\n",
+    "    PRIMARY KEY(sku),\n",
+    "    CONSTRAINT price_positive CHECK (price > 0)\n",
     ");\n",
     "\n",
+    "-- RI-4: Todo o sku em product tem de estar presente em supplier.\n",
     "CREATE TABLE supplier\n",
     "(\n",
     "    tin NUMERIC(12),\n",
@@ -434,6 +442,7 @@
     "    FOREIGN KEY(sku) REFERENCES product\n",
     ");\n",
     "\n",
+    "-- RI-1: Todo o ssn em Employee tem de estar presente em works.\n",
     "CREATE TABLE works\n",
     "(\n",
     "    ssn NUMERIC(12) NOT NULL,\n",
@@ -454,6 +463,7 @@
     "    FOREIGN KEY(order_number) REFERENCES package\n",
     ");\n",
     "\n",
+    "-- RI-2: Todo o par (custNo, orderNo) em pay tem de estar presente em Order.\n",
     "CREATE TABLE pay\n",
     "(\n",
     "    customer_number INT NOT NULL,\n",
@@ -463,6 +473,7 @@
     "    FOREIGN KEY(order_number) REFERENCES sale\n",
     ");\n",
     "\n",
+    "-- RI-3: Todo o orderNo em package tem de estar presente em contains.\n",
     "CREATE TABLE contains\n",
     "(\n",
     "    order_number BIGINT NOT NULL,\n",
@@ -496,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 350,
    "id": "689fbf59-980b-4c09-8b8e-7beee128b324",
    "metadata": {
     "tags": []
@@ -596,7 +607,7 @@
        "[]"
       ]
      },
-     "execution_count": 338,
+     "execution_count": 350,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +655,7 @@
     "INSERT INTO sale VALUES(8);\n",
     "\n",
     "INSERT INTO product VALUES('TS123456', 'Água Molhadinha, 50cl', 'Água mineral natural da Serra da Estrela. Com pH de 7.0, perfeita para a saude. Produto Nacional', 0.50);\n",
-    "INSERT INTO product VALUES('KS944RUR', 'Carregador Apple iPhone', 'Carregador lightning de 40W com fio de 40cm.', 90);\n",
+    "INSERT INTO product VALUES('KS944RUR', 'Carregador Apple iPhone', 'Carregador lightning de 40W com fio de 40cm.', 90, 789870254652);\n",
     "INSERT INTO product VALUES('KS93528TUT', 'Bolachas Oreo', 'Bolachas de chocolate com recheio de creme.', 1.50);\n",
     "INSERT INTO product VALUES('KA17120203', 'Red Bull, 25cl', 'Bebida energética com cafeína, baixa em açúcar.', 2.50);\n",
     "INSERT INTO product VALUES('HM21KMPW', 'Portátil Gaming ASUS Rog Strix', 'Intel Core i7, 32Gb Ram, RTX 4080, SSD NVMe 1Tb', 2389.99);\n",
@@ -914,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 342,
    "id": "bed65cfe-3a3c-4244-847b-808f84b12e47",
    "metadata": {
     "tags": []
@@ -965,7 +976,7 @@
        " (8, Decimal('4779.98'))]"
       ]
      },
-     "execution_count": 336,
+     "execution_count": 342,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -978,7 +989,6 @@
     "FROM\n",
     "    (SELECT \n",
     "        order_number,\n",
-    "        sku,\n",
     "        qty*price AS sub_total\n",
     "    FROM sale\n",
     "    NATURAL JOIN package\n",
