--- a/work/report.ipynb
+++ b/work/report.ipynb
@@ -13,11 +13,11 @@
     "\n",
     "### Grupo 21\n",
     "<dl>\n",
-    "    <dt>16 horas (33%)</dt>\n",
+    "    <dt>17 horas (33%)</dt>\n",
     "    <dd>ist1100293 Carlos Felgueiras</dd>\n",
-    "    <dt>16 horas (34%)</dt>\n",
+    "    <dt>17 horas (34%)</dt>\n",
     "    <dd>ist1102556 Daniel Carvalho</dd>\n",
-    "    <dt>16 horas (33%)</dt>\n",
+    "    <dt>17 horas (33%)</dt>\n",
     "    <dd>ist1102597 Duarte Sousa</dd>\n",
     "<dl>"
    ]
@@ -91,7 +91,6 @@
     "    - (price > 0)\n",
     "- Supplier (<u>tin</u>, sku, address, name, date)\n",
     "    - sku: FK (Product) not null\n",
-    "\n",
     "- works (<u>ssn</u>, <u>name</u>, <u>address</u>)\n",
     "    - ssn: FK (Employee)\n",
     "    - name: FK (Department)\n",
@@ -110,6 +109,16 @@
     "- delivery (<u>address</u>, <u>tin</u>)\n",
     "    - address: FK (Warehouse)\n",
     "    - tin: FK (Supplier)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6000bafd-00de-4e6e-ae82-7d4ff65a7c97",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "Justificação: No caso das especializações de Workplace, decidimos utilizar uma tabela para cada especialização visto que esta é opcional e por isso podem haver muitos workplaces que não possuem especialização, fazendo com que existissem muitos NULLs. O mesmo raciocinio aplica-se à especialização da Order (Sale). Para o caso do Product e Product w/ EAN, consideramos que a maior parte dos produtos têm EAN (visto que essa é a norma internacional) e por isso guardamos na tabela da superclasse."
    ]
   },
   {
@@ -174,7 +183,7 @@
    "id": "fb153d59-2d55-484f-bed9-0c60e02b27ae",
    "metadata": {},
    "source": [
-    "$\\Pi_{\\text{c.name}} \\big(\\text{Customer} \\bowtie_{\\text{c.customer_number} = \\text{o.customer_number}}\\rho_{o}(\\sigma_{\\text{date} \\ge \\text{\"01-01-2023\"} \\wedge \\text{date} \\le \\text{\"31-12-2023\"}} (\\text{Order})\\bowtie \\text{contains} \\bowtie \\sigma_{\\text{price} > 50} (\\text{Product})) \\big)$"
+    "$\\Pi_{\\text{c.name}} \\Bigl(\\text{Customer} \\bowtie_{\\text{c.customer_number} = \\text{o.customer_number}}\\rho_{o}\\bigl(\\sigma_{\\text{date} \\ge \\text{\"01-01-2023\"} \\wedge \\text{date} \\le \\text{\"31-12-2023\"}} (\\text{Order})\\bowtie \\text{contains} \\bowtie \\sigma_{\\text{price} > 50} (\\text{Product})\\bigr) \\Bigr)$"
    ]
   },
   {
@@ -192,7 +201,7 @@
    "source": [
     "$R \\leftarrow \\text{Employee} \\bowtie_{\\text{e.ssn} = \\text{w.ssn}} \\text{works} \\bowtie \\text{Workplace}$\n",
     "\n",
-    "$\\Pi_{\\text{e.name}}\\big(((R \\bowtie \\text{Warehouse}) - (R \\bowtie \\text{Office})) \\bowtie \\text{process} \\bowtie \\sigma_{\\text{date} \\ge \\text{\"01-01-2023\"} \\wedge \\text{date} \\le \\text{\"31-01-2023\"}} (\\text{Order}) \\big)$"
+    "$\\Pi_{\\text{e.name}}\\Bigl(\\bigl((R \\bowtie \\text{Warehouse}) - (R \\bowtie \\text{Office})) \\bowtie \\text{process} \\bowtie \\sigma_{\\text{date} \\ge \\text{\"01-01-2023\"} \\wedge \\text{date} \\le \\text{\"31-01-2023\"}} (\\text{Order}) \\Bigr)$"
    ]
   },
   {
@@ -255,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "195436d2-5bb5-4ab8-879b-b7ca19fb8d8a",
    "metadata": {
     "tags": []
@@ -265,8 +274,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n"
+      "\u001b[33mThere's a new jupysql version available (0.7.5), you're running 0.7.4. To upgrade: pip install jupysql --upgrade\u001b[0m\n"
      ]
     }
    ],
@@ -277,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 17,
    "id": "7dad4bdb-454b-4e0a-af55-93580ab2b56c",
    "metadata": {
     "tags": []
@@ -326,14 +334,13 @@
        "[]"
       ]
      },
-     "execution_count": 349,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "-- Visto que 'order' é uma keyword em SQL, decidimos renomear a relação Order para package.\n",
     "\n",
     "-- schema.sql\n",
     "DROP TABLE IF EXISTS employee CASCADE;\n",
@@ -342,7 +349,7 @@
     "DROP TABLE IF EXISTS office CASCADE;\n",
     "DROP TABLE IF EXISTS warehouse CASCADE;\n",
     "DROP TABLE IF EXISTS customer CASCADE;\n",
-    "DROP TABLE IF EXISTS package CASCADE;\n",
+    "DROP TABLE IF EXISTS _order CASCADE;\n",
     "DROP TABLE IF EXISTS sale CASCADE;\n",
     "DROP TABLE IF EXISTS product CASCADE;\n",
     "DROP TABLE IF EXISTS supplier CASCADE;\n",
@@ -371,8 +378,8 @@
     "CREATE TABLE workplace\n",
     "(\n",
     "    address VARCHAR(300),\n",
-    "    gps_lat DOUBLE PRECISION,\n",
-    "    gps_long DOUBLE PRECISION,\n",
+    "    gps_lat DOUBLE PRECISION NOT NULL,\n",
+    "    gps_long DOUBLE PRECISION NOT NULL,\n",
     "    UNIQUE (gps_lat, gps_long),\n",
     "    PRIMARY KEY(address)\n",
     ");\n",
@@ -394,20 +401,20 @@
     "CREATE TABLE customer\n",
     "(\n",
     "    customer_number SERIAL,\n",
-    "    name VARCHAR(80),\n",
-    "    email VARCHAR(50) UNIQUE,\n",
+    "    name VARCHAR(80) NOT NULL,\n",
+    "    email VARCHAR(50) UNIQUE NOT NULL,\n",
     "    phone_number VARCHAR(20),\n",
     "    address VARCHAR(300),\n",
     "    PRIMARY KEY(customer_number)\n",
     ");\n",
     "\n",
-    "-- RI-2: Todo o par (customer_number, order_number) em pay tem de estar presente em package.\n",
-    "-- RI-3: Todo o orderNo em package tem de estar presente em contains.\n",
-    "CREATE TABLE package\n",
+    "-- RI-2: Todo o par (customer_number, order_number) em pay tem de estar presente em order.\n",
+    "-- RI-3: Todo o orderNo em order tem de estar presente em contains.\n",
+    "CREATE TABLE _order\n",
     "(\n",
     "    order_number BIGSERIAL,\n",
     "    customer_number INT NOT NULL REFERENCES customer,\n",
-    "    order_date DATE,\n",
+    "    order_date DATE NOT NULL,\n",
     "    PRIMARY KEY(order_number)\n",
     ");\n",
     "\n",
@@ -415,16 +422,16 @@
     "(\n",
     "    order_number BIGINT,\n",
     "    PRIMARY KEY(order_number),\n",
-    "    FOREIGN KEY(order_number) REFERENCES package\n",
+    "    FOREIGN KEY(order_number) REFERENCES _order\n",
     ");\n",
     "\n",
     "-- RI-4: Todo o sku em product tem de estar presente em supplier.\n",
     "CREATE TABLE product\n",
     "(\n",
     "    sku VARCHAR(20),\n",
-    "    name VARCHAR(80),\n",
+    "    name VARCHAR(80) NOT NULL,\n",
     "    description VARCHAR(1000),\n",
-    "    price DECIMAL,\n",
+    "    price DECIMAL NOT NULL,\n",
     "    ean NUMERIC(13),\n",
     "    PRIMARY KEY(sku),\n",
     "    CONSTRAINT price_positive CHECK (price > 0)\n",
@@ -435,7 +442,7 @@
     "(\n",
     "    tin NUMERIC(12),\n",
     "    sku VARCHAR(20) NOT NULL,\n",
-    "    address VARCHAR(300),\n",
+    "    address VARCHAR(300) NOT NULL,\n",
     "    name VARCHAR(80),\n",
     "    contract_date DATE NOT NULL,\n",
     "    PRIMARY KEY(tin),\n",
@@ -445,9 +452,9 @@
     "-- RI-1: Todo o ssn em Employee tem de estar presente em works.\n",
     "CREATE TABLE works\n",
     "(\n",
-    "    ssn NUMERIC(12) NOT NULL,\n",
-    "    department_name VARCHAR(80) NOT NULL,\n",
-    "    address VARCHAR(300) NOT NULL,\n",
+    "    ssn NUMERIC(12),\n",
+    "    department_name VARCHAR(80),\n",
+    "    address VARCHAR(300),\n",
     "    PRIMARY KEY(ssn, department_name, address),\n",
     "    FOREIGN KEY(ssn) REFERENCES employee,\n",
     "    FOREIGN KEY(department_name) REFERENCES department(name),\n",
@@ -456,39 +463,39 @@
     "\n",
     "CREATE TABLE process\n",
     "(\n",
-    "    ssn NUMERIC(12) NOT NULL,\n",
-    "    order_number BIGINT NOT NULL,\n",
+    "    ssn NUMERIC(12),\n",
+    "    order_number BIGINT,\n",
     "    PRIMARY KEY(ssn, order_number),\n",
     "    FOREIGN KEY(ssn) REFERENCES employee(ssn),\n",
-    "    FOREIGN KEY(order_number) REFERENCES package\n",
+    "    FOREIGN KEY(order_number) REFERENCES _order\n",
     ");\n",
     "\n",
     "-- RI-2: Todo o par (custNo, orderNo) em pay tem de estar presente em Order.\n",
     "CREATE TABLE pay\n",
     "(\n",
-    "    customer_number INT NOT NULL,\n",
-    "    order_number BIGINT UNIQUE NOT NULL,\n",
+    "    customer_number INT,\n",
+    "    order_number BIGINT,\n",
     "    PRIMARY KEY(customer_number, order_number),\n",
     "    FOREIGN KEY(customer_number) REFERENCES customer,\n",
     "    FOREIGN KEY(order_number) REFERENCES sale\n",
     ");\n",
     "\n",
-    "-- RI-3: Todo o orderNo em package tem de estar presente em contains.\n",
+    "-- RI-3: Todo o orderNo em order tem de estar presente em contains.\n",
     "CREATE TABLE contains\n",
     "(\n",
-    "    order_number BIGINT NOT NULL,\n",
-    "    sku VARCHAR(20) NOT NULL,\n",
+    "    order_number BIGINT,\n",
+    "    sku VARCHAR(20),\n",
     "    qty INT NOT NULL,\n",
     "    PRIMARY KEY(order_number, sku),\n",
-    "    FOREIGN KEY(order_number) REFERENCES package,\n",
+    "    FOREIGN KEY(order_number) REFERENCES _order,\n",
     "    FOREIGN KEY(sku) REFERENCES product,\n",
     "    CONSTRAINT qty_positive CHECK (qty > 0)\n",
     ");\n",
     "\n",
     "CREATE TABLE delivery\n",
     "(\n",
-    "    address VARCHAR(300) NOT NULL,\n",
-    "    tin NUMERIC(12) NOT NULL,\n",
+    "    address VARCHAR(300),\n",
+    "    tin NUMERIC(12),\n",
     "    PRIMARY KEY(address, tin),\n",
     "    FOREIGN KEY(address) REFERENCES warehouse(address),\n",
     "    FOREIGN KEY(tin) REFERENCES supplier(tin)\n",
@@ -507,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 18,
    "id": "689fbf59-980b-4c09-8b8e-7beee128b324",
    "metadata": {
     "tags": []
@@ -607,7 +614,7 @@
        "[]"
       ]
      },
-     "execution_count": 350,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,15 +646,15 @@
     "INSERT INTO warehouse VALUES('Avenida Lago 23, Cascais, Lisboa, 2765-099');\n",
     "INSERT INTO warehouse VALUES('Rua Pé Mouro Armz 108, Sintra, Lisboa, 2735-542');\n",
     "\n",
-    "INSERT INTO package VALUES(DEFAULT, 2, '2022-11-30');\n",
-    "INSERT INTO package VALUES(DEFAULT, 3, '2022-12-07');\n",
-    "INSERT INTO package VALUES(DEFAULT, 1, '2022-12-24');\n",
-    "INSERT INTO package VALUES(DEFAULT, 3, '2023-01-05');\n",
-    "INSERT INTO package VALUES(DEFAULT, 2, '2023-01-17');\n",
-    "INSERT INTO package VALUES(DEFAULT, 1, '2023-01-21');\n",
-    "INSERT INTO package VALUES(DEFAULT, 1, '2023-02-12');\n",
-    "INSERT INTO package VALUES(DEFAULT, 2, '2023-03-19');\n",
-    "INSERT INTO package VALUES(DEFAULT, 3, '2023-04-17');\n",
+    "INSERT INTO _order VALUES(DEFAULT, 2, '2022-11-30');\n",
+    "INSERT INTO _order VALUES(DEFAULT, 3, '2022-12-07');\n",
+    "INSERT INTO _order VALUES(DEFAULT, 1, '2022-12-24');\n",
+    "INSERT INTO _order VALUES(DEFAULT, 3, '2023-01-05');\n",
+    "INSERT INTO _order VALUES(DEFAULT, 2, '2023-01-17');\n",
+    "INSERT INTO _order VALUES(DEFAULT, 1, '2023-01-21');\n",
+    "INSERT INTO _order VALUES(DEFAULT, 1, '2023-02-12');\n",
+    "INSERT INTO _order VALUES(DEFAULT, 2, '2023-03-19');\n",
+    "INSERT INTO _order VALUES(DEFAULT, 3, '2023-04-17');\n",
     "\n",
     "INSERT INTO sale VALUES(2);\n",
     "INSERT INTO sale VALUES(4);\n",
@@ -736,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 10,
    "id": "15197f8d-073e-4cb8-861f-be594a6efadd",
    "metadata": {
     "tags": []
@@ -773,7 +780,7 @@
        "[('Miguel',), ('Pedro',)]"
       ]
      },
-     "execution_count": 333,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,12 +788,18 @@
    "source": [
     "%%sql\n",
     "    \n",
-    "SELECT DISTINCT c.name\n",
-    "FROM (SELECT * FROM package WHERE order_date BETWEEN '2023-01-01' AND '2023-12-31') o\n",
-    "NATURAL JOIN contains\n",
-    "NATURAL JOIN (SELECT * FROM product WHERE price > 50) p\n",
-    "INNER JOIN customer c\n",
-    "    USING (customer_number);"
+    "SELECT\n",
+    "    DISTINCT c.name\n",
+    "FROM\n",
+    "    (SELECT * FROM _order WHERE order_date BETWEEN '2023-01-01' AND '2023-12-31') o\n",
+    "NATURAL JOIN\n",
+    "    contains\n",
+    "NATURAL JOIN \n",
+    "    (SELECT * FROM product WHERE price > 50) p\n",
+    "INNER JOIN\n",
+    "    customer c\n",
+    "USING\n",
+    "    (customer_number);"
    ]
   },
   {
@@ -801,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 15,
    "id": "6d5950f2-a166-45cb-a217-3d13e0253dda",
    "metadata": {
     "tags": []
@@ -835,7 +848,7 @@
        "[('Carlos',)]"
       ]
      },
-     "execution_count": 334,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,13 +856,44 @@
    "source": [
     "%%sql\n",
     "\n",
-    "WITH w as (SELECT * FROM (employee INNER JOIN works USING (ssn) NATURAL JOIN workplace NATURAL JOIN warehouse)),\n",
-    "     of as (SELECT * FROM (employee INNER JOIN works USING (ssn) NATURAL JOIN workplace wp NATURAL JOIN office))\n",
-    "\n",
-    "SELECT DISTINCT e.name\n",
-    "FROM (SELECT * FROM package WHERE order_date BETWEEN '2023-01-01' AND '2023-01-31') o\n",
-    "NATURAL JOIN process p\n",
-    "NATURAL JOIN (SELECT * FROM w EXCEPT SELECT * FROM of)e;"
+    "WITH w AS (\n",
+    "    SELECT\n",
+    "        *\n",
+    "    FROM\n",
+    "        employee\n",
+    "        INNER JOIN works USING (ssn)\n",
+    "        NATURAL JOIN workplace\n",
+    "        NATURAL JOIN warehouse\n",
+    "),\n",
+    "of AS (\n",
+    "    SELECT\n",
+    "        *\n",
+    "    FROM\n",
+    "        employee\n",
+    "        INNER JOIN works USING (ssn)\n",
+    "        NATURAL JOIN workplace wp\n",
+    "        NATURAL JOIN office\n",
+    ")\n",
+    "SELECT DISTINCT\n",
+    "    e.name\n",
+    "FROM (\n",
+    "    SELECT\n",
+    "        *\n",
+    "    FROM\n",
+    "        _order\n",
+    "    WHERE\n",
+    "        order_date BETWEEN '2023-01-01' AND '2023-01-31') o\n",
+    "    NATURAL JOIN process p\n",
+    "    NATURAL JOIN (\n",
+    "        SELECT\n",
+    "            *\n",
+    "        FROM\n",
+    "            w\n",
+    "    EXCEPT\n",
+    "    SELECT\n",
+    "        *\n",
+    "    FROM\n",
+    "        of) e;"
    ]
   },
   {
@@ -864,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 13,
    "id": "115d2b57-34a7-4d8c-b5fe-0a0df5a6a9df",
    "metadata": {
     "tags": []
@@ -898,7 +942,7 @@
        "[('Red Bull, 25cl',)]"
       ]
      },
-     "execution_count": 335,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,13 +950,26 @@
    "source": [
     "%%sql\n",
     "\n",
-    "SELECT name\n",
-    "FROM product\n",
-    "NATURAL JOIN contains\n",
-    "NATURAL JOIN package\n",
-    "NATURAL JOIN sale\n",
-    "GROUP BY sku\n",
-    "HAVING SUM(qty) >= ALL (SELECT SUM(qty) FROM product NATURAL JOIN contains NATURAL JOIN package NATURAL JOIN sale GROUP BY sku);"
+    "SELECT\n",
+    "    name\n",
+    "FROM\n",
+    "    product\n",
+    "    NATURAL JOIN contains\n",
+    "    NATURAL JOIN _order\n",
+    "    NATURAL JOIN sale\n",
+    "GROUP BY\n",
+    "    sku\n",
+    "HAVING\n",
+    "    SUM(qty) >= ALL (\n",
+    "        SELECT\n",
+    "            SUM(qty)\n",
+    "        FROM\n",
+    "            product\n",
+    "        NATURAL JOIN contains\n",
+    "        NATURAL JOIN _order\n",
+    "        NATURAL JOIN sale\n",
+    "    GROUP BY\n",
+    "        sku);"
    ]
   },
   {
@@ -925,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 14,
    "id": "bed65cfe-3a3c-4244-847b-808f84b12e47",
    "metadata": {
     "tags": []
@@ -955,10 +1012,6 @@
        "            <td>2391.49</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>4</td>\n",
-       "            <td>100.00</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
        "            <td>5</td>\n",
        "            <td>4959.98</td>\n",
        "        </tr>\n",
@@ -966,17 +1019,21 @@
        "            <td>8</td>\n",
        "            <td>4779.98</td>\n",
        "        </tr>\n",
+       "        <tr>\n",
+       "            <td>4</td>\n",
+       "            <td>100.00</td>\n",
+       "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
        "[(2, Decimal('2391.49')),\n",
-       " (4, Decimal('100.00')),\n",
        " (5, Decimal('4959.98')),\n",
-       " (8, Decimal('4779.98'))]"
+       " (8, Decimal('4779.98')),\n",
+       " (4, Decimal('100.00'))]"
       ]
      },
-     "execution_count": 342,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,18 +1041,20 @@
    "source": [
     "%%sql\n",
     "\n",
-    "SELECT order_number,\n",
-    "       SUM(sub_total) AS total\n",
-    "FROM\n",
-    "    (SELECT \n",
+    "SELECT\n",
+    "    order_number,\n",
+    "    SUM(sub_total) AS total\n",
+    "FROM (\n",
+    "    SELECT\n",
     "        order_number,\n",
-    "        qty*price AS sub_total\n",
-    "    FROM sale\n",
-    "    NATURAL JOIN package\n",
+    "        qty * price AS sub_total\n",
+    "    FROM\n",
+    "        sale\n",
+    "    NATURAL JOIN _order\n",
     "    NATURAL JOIN contains\n",
     "    NATURAL JOIN product) a\n",
-    "GROUP BY order_number\n",
-    "ORDER BY order_number;"
+    "GROUP BY\n",
+    "    order_number;"
    ]
   },
   {
