--- a/work/report.ipynb
+++ b/work/report.ipynb
@@ -201,7 +201,7 @@
    "source": [
     "$R \\leftarrow \\text{Employee} \\bowtie_{\\text{e.ssn} = \\text{w.ssn}} \\text{works} \\bowtie \\text{Workplace}$\n",
     "\n",
-    "$\\Pi_{\\text{e.name}}\\Bigl(\\bigl((R \\bowtie \\text{Warehouse}) - (R \\bowtie \\text{Office})) \\bowtie \\text{process} \\bowtie \\sigma_{\\text{date} \\ge \\text{\"01-01-2023\"} \\wedge \\text{date} \\le \\text{\"31-01-2023\"}} (\\text{Order}) \\Bigr)$"
+    "$\\Pi_{\\text{e.name}}\\Bigl(\\bigl((R \\bowtie \\text{Warehouse}) - (R \\bowtie \\text{Office})\\bigr) \\bowtie \\text{process} \\bowtie \\sigma_{\\text{date} \\ge \\text{\"01-01-2023\"} \\wedge \\text{date} \\le \\text{\"31-01-2023\"}} (\\text{Order}) \\Bigr)$"
    ]
   },
   {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "195436d2-5bb5-4ab8-879b-b7ca19fb8d8a",
    "metadata": {
     "tags": []
@@ -274,7 +274,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mThere's a new jupysql version available (0.7.5), you're running 0.7.4. To upgrade: pip install jupysql --upgrade\u001b[0m\n"
+      "The sql extension is already loaded. To reload it, use:\n",
+      "  %reload_ext sql\n"
      ]
     }
    ],
@@ -285,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "7dad4bdb-454b-4e0a-af55-93580ab2b56c",
    "metadata": {
     "tags": []
@@ -334,7 +335,7 @@
        "[]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "689fbf59-980b-4c09-8b8e-7beee128b324",
    "metadata": {
     "tags": []
@@ -614,7 +615,7 @@
        "[]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "id": "15197f8d-073e-4cb8-861f-be594a6efadd",
    "metadata": {
     "tags": []
@@ -780,7 +781,7 @@
        "[('Miguel',), ('Pedro',)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,18 +789,24 @@
    "source": [
     "%%sql\n",
     "    \n",
-    "SELECT\n",
-    "    DISTINCT c.name\n",
-    "FROM\n",
-    "    (SELECT * FROM _order WHERE order_date BETWEEN '2023-01-01' AND '2023-12-31') o\n",
-    "NATURAL JOIN\n",
-    "    contains\n",
-    "NATURAL JOIN \n",
-    "    (SELECT * FROM product WHERE price > 50) p\n",
-    "INNER JOIN\n",
-    "    customer c\n",
-    "USING\n",
-    "    (customer_number);"
+    "SELECT DISTINCT\n",
+    "    c.name\n",
+    "FROM (\n",
+    "    SELECT\n",
+    "        *\n",
+    "    FROM\n",
+    "        _order\n",
+    "    WHERE\n",
+    "        EXTRACT(YEAR FROM order_date) = 2023) o\n",
+    "    NATURAL JOIN contains\n",
+    "    NATURAL JOIN (\n",
+    "        SELECT\n",
+    "            *\n",
+    "        FROM\n",
+    "            product\n",
+    "        WHERE\n",
+    "            price > 50) p\n",
+    "    INNER JOIN customer c USING (customer_number);"
    ]
   },
   {
@@ -814,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "id": "6d5950f2-a166-45cb-a217-3d13e0253dda",
    "metadata": {
     "tags": []
@@ -848,7 +855,7 @@
        "[('Carlos',)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,18 +889,13 @@
     "    FROM\n",
     "        _order\n",
     "    WHERE\n",
-    "        order_date BETWEEN '2023-01-01' AND '2023-01-31') o\n",
+    "        EXTRACT(YEAR FROM order_date) = 2023\n",
+    "        AND EXTRACT(MONTH FROM order_date) = 1) o\n",
     "    NATURAL JOIN process p\n",
     "    NATURAL JOIN (\n",
-    "        SELECT\n",
-    "            *\n",
-    "        FROM\n",
-    "            w\n",
-    "    EXCEPT\n",
-    "    SELECT\n",
-    "        *\n",
-    "    FROM\n",
-    "        of) e;"
+    "        SELECT * FROM w\n",
+    "        EXCEPT\n",
+    "        SELECT * FROM of) e;"
    ]
   },
   {
@@ -908,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "id": "115d2b57-34a7-4d8c-b5fe-0a0df5a6a9df",
    "metadata": {
     "tags": []
@@ -942,7 +944,7 @@
        "[('Red Bull, 25cl',)]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -982,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "id": "bed65cfe-3a3c-4244-847b-808f84b12e47",
    "metadata": {
     "tags": []
@@ -1033,7 +1035,7 @@
        " (4, Decimal('100.00'))]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
