feature: indexes done

--- a/work/E3-report.ipynb
+++ b/work/E3-report.ipynb
@@ -841,7 +841,12 @@
    "source": [
     "### Tipo de Índice, Atributos & Justificação\n",
     "\n",
-    "..."
+    "- Indice Hash na tabela orders do ano extraido da coluna date: Visto que esta é a condição de filtragem que é geralmente mais restritiva, escolhemos este indice. (Como o price e o date nao estao na mesma tabela, nao podemos fazer um indice composto). Usamos hash porque a filtragem é por igualdade.\n",
+    "\n",
+    "- (Caso o postgres priorize as filtragens antes dos joins)\n",
+    "- Indice BTREE na tabela product na coluna price: Só vale a pena se a filtragem por preço for feita antes dos joins (e separado da filtragem por ano). Usamos BTREE porque a filtragem é por range.\n",
+    "\n",
+    "- Não são necessários indices para os joins, visto que cada join já tem à disposição um indice de chave primária (default do postgres). Primeiro faz join orders com contains usando o indice de chave primaria do orders, e depois faz join do resultado com o product usando o indice de chave primaria do product."
    ]
   },
   {
@@ -858,14 +863,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 201,
+   "id": "7a0040a2-b433-4bee-930f-96662fffc974",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-08T16:38:08.256447Z",
+     "iopub.status.busy": "2023-06-08T16:38:08.254096Z",
+     "iopub.status.idle": "2023-06-08T16:38:08.699289Z",
+     "shell.execute_reply": "2023-06-08T16:38:08.698640Z",
+     "shell.execute_reply.started": "2023-06-08T16:38:08.256299Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;postgresql://db:***@postgres/db&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'postgresql://db:***@postgres/db'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "DROP INDEX IF EXISTS product_name_idx;\n",
+    "\n",
+    "CREATE INDEX product_name_idx ON product (name);"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1af12988-e1f5-4a72-835d-9aba30d0ce88",
    "metadata": {},
    "source": [
     "### Tipo de Índice, Atributos & Justificação\n",
     "\n",
-    "..."
+    "- Indice BTree na tabela product para a coluna name: Visto que tamos a filtrar usando a wildcard 'A%', o postgres pode usar este indice, visto que todos as linhas resultantes da filtragem começam por 'A', logo o indice é util. Utilizamos BTree porque não se trata de igualdade."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "826b376e-074f-403e-82c6-598781056207",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
